2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Drop usage of obsolete macros AC_EXEEXT and AC_OBJEXT.
	* tests/ansi4.test: Drop AC_OBJEXT and AC_EXEEXT.
	* tests/ansi6.test: Likewise.
	* tests/ansi7.test: Likewise.
	* tests/condlib.test: Likewise.
	* tests/cygwin32.test: Likewise.
	* tests/exeext2.test: Likewise.
	* tests/libobj11.test: Likewise.
	* tests/library.test: Likewise.
	* tests/txinfo5.test: Likewise.

2008-03-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Skip instsh3.test if `touch -t' does not work.
	* tests/instsh3.test: Test for `touch -t', fails with Solaris
	/usr/ucb/touch.
	* THANKS: Update.
	Report by Younes Younes.

2008-02-27  Reuben Thomas  <rrt@sc3d.org>

	* doc/automake.texi (wildcards): Improve "Why doesn't Automake
	support wildcards" node's English and sense.

2008-02-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/check.am (check-TESTS): In the case patterns for
	XFAILed tests, add literal bracket expression for matching
	whitespace, as NetBSD 4.99.54 ksh does not understand a
	bracket expression resulting from variable expansion.
	* README: Explain how to run the Automake test suite, including
	setting MAKE to test gmake.
	Report by Patrick Welche.

2008-02-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR automake/498
	* m4/options.m4 (_AM_SET_OPTIONS): Use m4_foreach_w instead of
	obsolete AC_FOREACH.
	Report by NightStrike and gurganbl@rose-hulman.edu.

2008-02-17  Colin Watson  <cjwatson@debian.org>  (tiny change)

	* lib/am/tags.am (ID): Fix typo in workaround for old awk.

2008-02-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/.gitignore: Ignore files generated by `make ps pdf html'.

2008-02-05  Reuben Thomas  <rrt@sc3d.org>

	* doc/automake.texi (CVS): configure.ac will appear newer, not
	older, than configure.  Use `lexical' instead of `alphabetical'.

2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/man3.test: Avoid `make VAR=value'.
