@@ -1,3 +1,8 @@
+2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am (WGET_SV_GIT_CF): New.
+	(fetch): Pull config.guess and config.sub from git repo now.
+
 2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Drop usage of obsolete macros AC_EXEEXT and AC_OBJEXT.
